# sreeram-agent-crew

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  report.md
.github/workflows/: daily-digest.yml  price-alert.yml
src/sreeram_crew_scaffold/: crew.py  main.py  price_alert.py
src/sreeram_crew_scaffold/config/: agents.yaml  tasks.yaml
src/sreeram_crew_scaffold/tools/: email_tool.py  price_tool.py  transcribe_tool.py  youtube_tool.py
state/: gold_pending.json  gold_seen.json  price_last_seen.json  silver_seen.json
